--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Shubhangi</span>
       </h1>
       <p class="two" id="greetingText">I really like your name btw!</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>It's your birthday my jaan! I can't wait to come and wish you with your gifts in my hand! ♥</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">Happy birthday to you!! I still remember the day, thank you for everything......blah blah</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">May god bless you, and Ujjwal Loves you!!♥ ;)</h5>
       </div>
     </div>
     <div class="seven">
